<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Test!</string>
    <string name="app_name">roadtripcompanion</string>
    <string name="tripNameLabel">Trip Name:</string>
    <string name="startDateLabel">Start Date:</string>
    <string name="startDateButton">Pick Start Date</string>
    <string name="startAddressLabel">Start Address:</string>
    <string name="destAddressLabel">Dest. Address:</string>
    <string name="createTrip">Create Trip</string>
    <string name="previewTrip">Preview Trip</string>
    <string name="previewTripBtn">Preview Trip</string>
    <string name="reviseTripBtn">Revise Trip</string>
    <string name="createTripBtn">Create Trip</string>
    <string name="listTrips">Choose Trip</string>
    <string name="viewTrip">View Trip</string>
    <string name="tripNameHeader">TRIP NAME</string>
    <string name="gUserName">"MJurkoic"</string>
    <string name="gPassword">"kielbasa"</string>
    
    <string name="menu_home">Main Menu</string>
    <string name="menu_create">Create Trip</string>
    <string name="menu_list">List Trips</string>
    <string name="menu_tweet">Tweet</string>
    <string name="menu_photo">Take a Photo</string>
    <string name="takephoto">Take a Photo</string>
    
    <string name="table_layout_10_user">User     :</string>
    <string name="table_layout_10_username_text">UserName</string>
    <string name="table_layout_10_password">Password:</string>
    <string name="table_layout_10_password_text">Password</string>
    <string name="table_layout_10_cancel">Cancel</string>
    <string name="table_layout_10_login">Login</string>
    <string name="table_layout_10_update_text">UpdateText</string>
    <string name="table_layout_10_setup">Setup</string>
    <string name="table_layout_10_update">UpdateText</string>
    <string name="mainScreen">RoadTripCompanion</string>
	<string name="tweet">Twitter Client</string>
	<string name="twitterlogin">Twitter Login</string>
	<string name="settings">Settings</string>
	
</resources>
