<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/tripNameLabel"
    />
<TextView
android:id="@+id/tripNameTxt"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/startDateLabel"
    />
<TextView android:id="@+id/dateDisplay"
    		  android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/startAddressLabel"
    />
<TextView 
	android:id="@+id/startAddressTxt"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/destAddressLabel"
    />
<TextView 
	android:id="@+id/destAddressTxt"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	/>
<Button 
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/reviseTripBtn"
    android:id="@+id/reviseTripBtn"
/>
<Button 
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/createTripBtn"
    android:id="@+id/createTripBtn"
/>
<com.google.android.maps.MapView
		android:id="@+id/mapview"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:enabled="true" android:clickable="true"
		android:apiKey="0yRuTY785N-Ab55vpz1qspto55xlPMgYRk2o1GQ" />


</LinearLayout>

